--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,44 @@
 @tailwind components;
 @tailwind utilities;
 
-#header {
+/* Styling the scrollbar in Chrome */
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+}
+/* Styling the scrollbar in Firefox */
+::-moz-scrollbar {
+  width: 8px;
+}
+::-moz-scrollbar-thumb {
+  background-color: #ccc;
+}
+/* Styling the scrollbar in Safari */
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+}
+
+@layer utilities {
+    @variants responsive {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+
+      /* Hide scrollbar for IE, Edge and Firefox */
+      .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+      }
+    }
+  }
+
+  #header {
   background-color: white;
 }
 .zola-anchor {
